# rx

./: .gitignore  Cargo.toml  README.md  target  upload.sh
.github/workflows/: ci.yml
_trash/bin-parser/: Cargo.toml
_trash/binder/: Cargo.toml
_trash/binder/src/: book_shelf.rs  main.rs
_trash/netplan-cfg/: Cargo.toml  README.md
_trash/netplan-cfg/src/: main.rs
_trash/rx-web/: Cargo.toml
_trash/rx-web/examples/: ex_req.rs
_trash/rx-web/src/: req.rs
binder/: Cargo.toml  README.md
binder/src/: binder.rs  book_shelf.rs  encoding.rs  html.rs  main.rs  main.txt
bookworm/: Cargo.toml  README.md
cx/examples/: as_ref.rs  db.rs  ex_db.rs  file_system.rs  macro.rs
cx/src/: fs.rs  lib.rs  macros.rs
cx/src/db/: interface.rs  mod.rs
cx/src/db/dirdb/: dirdb.rs  mod.rs  table.rs
netplan-cfg/: Cargo.toml
rx/: Cargo.toml
rx-core/: Cargo.toml
rx-core-derive/: Cargo.toml
rx-core-derive/src/: complete_by.rs  lib.rs
rx-core/src/: app.rs  complete_by.rs  encryptor.rs  fs.rs  id.rs  int_enum.rs  lib.rs  log.rs  prelude.rs  serde_export.rs  test.rs
rx-core/src/algo/: a.rs  aes.rs  it.rs  mod.rs  slice.rs  vec.rs
rx-core/src/c/: string.rs
rx-core/src/collections/: id_map.rs  iter.rs  mod.rs  range_index.rs  top_multi_map.rs  top_queue.rs  vec_map.rs
rx-core/src/m/: basic.rs  mod.rs  range.rs  stat.rs  str.rs
rx-core/src/sys/: fs.rs  io.rs  mod.rs  thread.rs
rx-core/src/sys/fs/: dir.rs  file.rs  misc.rs  mod.rs
rx-core/src/text/: basic.rs  csv.rs  env_map.rs  id.rs  json.rs  json5.rs  mod.rs  ron.rs  text_map.rs  util.rs  yaml.rs
rx-core/src/time/: clock_period.rs  clock_time.rs  fun.rs  mod.rs  period.rs  stop_watch.rs  timestamp.rs  types.rs
rx-db/: Cargo.toml  README.md
rx-db-derive/: Cargo.toml
rx-db-derive/src/: lib.rs
rx-db/src/: interface.rs  lib.rs  test.rs  util.rs
rx-db/src/dirdb/: db.rs  dirdb.rs  mod.rs  table.rs  variant.rs
rx-db/src/interface/: db.rs  mod.rs  table.rs  variant.rs
rx-db/src/redisdb/: db.rs  mod.rs  table.rs  variant.rs
rx-fst/: Cargo.toml
rx-fst/src/: main.rs  main_new.txt
rx-linux/: Cargo.toml
rx-linux/src/: lib.rs
rx-linux/src/command/: apt.rs  basic.rs  ffmpeg.rs  mod.rs  netplan.rs  reboot.rs  rsync.rs  sh.rs  supervisorctl.rs
rx-net/: Cargo.toml
rx-net/data/: 2eth.yaml
rx-net/src/: ip.rs  lib.rs  prelude.rs  url.rs  util.rs
rx-net/src/cfg/: adapter.rs  mod.rs  netplan.rs
rx-net/src/frp/: log_msg.rs  mod.rs  stat.rs
rx-net/src/http/: apt_client_json.rs  client.rs  mod.rs
rx-net/src/mqtt/: MQTT.md  cfg.rs  client.rs  mod.rs  receiver.rs  sender.rs
rx-rest/: Cargo.toml
rx-rest/examples/: cx_task.py  task_client.py
rx-rest/src/: lib.rs
rx-rest/src/api/: common.rs  dao_item.rs  dao_list.rs  dao_list_client.rs  mod.rs  proc.rs  util.rs
rx-rest/src/task/: api_service.rs  mod.rs  task_client.rs  types.rs
rx-web/: Cargo.toml
rx-web/examples/: ex_nodex.rs  ex_req.rs  ex_url.rs  nodes.rs  url.rs
rx-web/src/: html.rs  lib.rs  node.rs  req.rs  url.rs
rx/src/: fs.rs  id.rs  lib.rs  macros.rs
rx/src/algo/: a.rs  mod.rs  slice.rs
rx/src/collections/: id_map.rs  mod.rs  range_index.rs  top_multi_map.rs  top_queue.rs
rx/src/text/: encoding.rs  json.rs  mod.rs
rx/src/time/: fun.rs  mod.rs  period.rs  stop_watch.rs  timestamp.rs  types.rs
