[workspace]
resolver = "3"

members = [
    "rx-core",
    "rx-core-derive",
    "rx-db",
    "rx-db-derive",
    "rx-linux",
    "rx-net",
    "rx-rest",
    #"rx-fst",
    #"rx-web",
    #"binder",
    #"bin-parser",
    #"netplan-cfg",
]

[workspace.package]
version = "0.1.4"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2024"
license = "MIT"
