[package]
name = "binder"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper-tls = "*"
#html5ever = "*"
#hyper = "*"
#futures = "*"
http_req = "*"

encoding_rs = "*"
html5ever = "*"