[package]
name = "binder"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
colored = "*"

http_req = "*"
http = "*"
html5ever = "*"

encoding_rs = "*"
regex = "*"

serde = "*"
serde_json = "*"
serde_derive = "*"

rx = { path = "../rx" }
rx-db = { path = "../rx-db" }
rx-web = { path = "../rx-web" }