[package]
name = "rx-core"
version = "0.1.4"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2024"

build = "build.rs"

[build-dependencies]
vergen = { version = "*", features = ["build", "git", "cargo", "gitoxide"] }

[dependencies]

path_macro = "*"
rx-core-derive = { path = "../rx-core-derive" }

geo-types = "*"
itertools = "*"
anyhow = "*"
thiserror = "*"
derive_more = { version = "*", features = ["full"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_json5 = { package = "json5", version = "*" }
serde_ron = { package = "ron", version = "*" }
serde_yaml = "*"

encoding_rs = "*"

tracing = "*"
tracing-subscriber = { version = "*", features = ["time"] }

uuid = { version = "*", features = ["serde", "v5"] }
chrono = { version = "*", features = ["serde"] }
time = "*"

dirs = "*"
fs_extra = "*"
num = "*"
rand = "*"

rand_core = "*"
ring = "*"
linked-hash-map="*"
tempfile = "*"

aes = "0.7"
block-modes = "0.8"
hex-literal = "*"
hex = "0.4.3"

clap = { version = "*", features = ["derive"] }