[package]
name = "rx-core"
version = "0.1.4"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2024"

build = "build.rs"

[build-dependencies]
vergen = { version = "*", features = ["build", "git", "cargo", "gitoxide"] }

[dependencies]

num-traits = "*"
path_macro = "*"
rx-core-derive = { path = "../rx-core-derive" }

geo-types = "*"
itertools = "*"
anyhow = "*"
thiserror = "*"
derive_more = { version = "*", features = ["full"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_json5 = { package = "json5", version = "*" }
serde_ron = { package = "ron", version = "*" }
serde_yaml = "*"

encoding_rs = "*"

tracing = "*"
tracing-subscriber = { version = "*", features = ["time"] }

uuid = { version = "*", features = ["serde", "v5"] }
chrono = { version = "*", features = ["serde"] }
time = "*"

dirs = "*"
fs_extra = "*"
num = "*"
rand = "*"

tempfile = "*"

aes = "*"
block-modes = "*"
hex-literal = "*"

clap = { version = "*", features = ["derive"] }
regex = "*"
