[package]
name = "rx-db"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rx-core = { path = "../rx-core" }
rx-db-derive = { path = "../rx-db-derive" }

serde = { version = "*", features = ["derive"] }

redis = "*"
r2d2 = "*"
r2d2_redis = "*"

anyhow = "*"
thiserror = "*"
path_macro = "*"
tempfile = "3.14.0"
url = "*"

uuid = { version = "1.4", features = ["v4"] }