[package]
name = "rx-net"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2021"

[dependencies]
rx-core = { path = "../rx-core" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["blocking"] }
url = "*"

paho-mqtt = "*"
rumqttc = "*"

sysinfo = "*"
network-interface = "*"

anyhow = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4"] }
path_macro = "*"