[package]
name = "rx-net"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rx-core = { path = "../rx-core" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json", "blocking"] }
url = "*"

paho-mqtt = "*"
rumqttc = "*"

sysinfo = "*"
network-interface = "*"

anyhow = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4"] }
path_macro = "*"
env_logger = "*"
regex = "*"
tempfile = "3.12.0"
mime_guess = "2.0.5"
