[package]
name = "rx-rest"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rx-core = { version = "*", path = "../rx-core" }
rx-db = { version = "*", path = "../rx-db" }

serde = "*"
serde_json = "*"
serde_derive = "*"
toml = "*"

time = { version = "*", features = ["macros", "formatting"] }
poem = { version = "3", features = ["anyhow"] }
poem-openapi = { version = "5", features = ["swagger-ui", "time", "uuid", "geo", "url"] }
tokio = { version = "1", features = ["full"] }

anyhow = "*"
thiserror = "*"
