[package]
name = "rx"
version = "0.1.2"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"

encoding_rs = "*"

uuid = { version = "0.6", features = ["serde", "v5"] }
chrono = { version = "*", features = ["serde"] }
time = "*"

dirs = "*"

