[package]
name = "bin-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rx-core = { version = "*", path = "../rx-core" }

#serde = { version = "*", features = ["derive"] }
#serde_json = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"