[package]
name = "rx-web"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2021"

[dependencies]
rx-core = { path = "../rx-core" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

curl = "*"
http_req = "*"
http = "*"
html5ever = "0.24"

encoding_rs = "*"
regex = "*"